fix: fix add to cart
